--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 body, h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
@@ -62,7 +61,7 @@ p {
 }
 
 .about, .education, .contact, .address, .work-experience, .skills {
-    margin-bottom: 20px;
+    display: block;
 }
 
 .skills {
@@ -118,7 +117,7 @@ h3.left-column {
 }
 
 .virtual, .nabi, .fairyland {
-    display: height 20px;
+    height: 20px;
 }
 
 .work-experience h5 {
@@ -137,7 +136,6 @@ li {
 
 .skills h3 {
     color: #2465ab;
-
 }
 
 .skills li {
@@ -272,72 +270,63 @@ li {
     display: show;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
     .resume {
-        flex-direction: row; /* Adjust layout to row for larger screens */
+        flex-direction: column;
+        padding: 10px;
     }
 
     .left-column, .right-column {
-        width: 50%;
-    }
-
-    .left-column {
-        margin-left: 50px;
-        margin-top: 50px;
-        border-right: 2px solid #eee;
-        border-radius: 50px;
-        padding: 40px;
-        background-color: #2465ab;
-    }
-
-    .right-column {
-        padding: 40px;
+        width: 100%;
+        margin: 0;
+        padding: 20px;
     }
 
     .name h1 {
-        font-size: 3.5em;
-        line-height: 60px;
-    }
-}
-
-@media (max-width: 768px) {
-    .name h1 {
-        font-size: 2.5em;
+        font-size: 3em;
         line-height: 50px;
-    }
-
-    .section-button {
-        font-size: 1em;
     }
 
     .skills {
         width: 100%;
+        margin: 40px auto;
     }
 
-    .skills li {
-        margin: 10px 0;
+    .section-button {
+        font-size: 1em;
+        padding: 8px 16px;
     }
 }
 
 @media (max-width: 480px) {
     .resume {
-        padding: 10px;
+        padding: 5px;
     }
 
     .name h1 {
-        font-size: 2em;
+        font-size: 2.5em;
         line-height: 40px;
     }
 
     .skills {
-        margin: 10px 0;
+        width: 100%;
+        margin: 20px auto;
     }
 
     .section-button {
         font-size: 0.9em;
+        padding: 8px 12px;
     }
 
-    .skills li {
-        margin: 10px 0;
+    .left-column, .right-column {
+        padding: 10px;
+    }
+
+    .bar {
+        height: 1px;
+    }
+
+    h3, h4, h5 {
+        font-size: 1.2em;
     }
 }
